# 0nmt

./: README.md  pyproject.toml  requirements.txt
notebooks/: bleu score.ipynb  demo.ipynb  playground.ipynb
zeronmt/: datasets.py  vectors.py
zeronmt/models/: attention.py  datatypes.py  decoder.py  encoder.py  seq2seq.py
