[tool.poetry]
name = "0nmt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
torchtext = "^0.15.2"
numpy = "^1.24.3"
tqdm = "^4.65.0"
pytorch-lightning = "^2.0.2"
matplotlib = "^3.7.1"
spacy = "^3.5.3"
wandb = "^0.15.4"
icecream = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
